Fix broken text clipping and shit
Thanks a lot, to me

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -105,6 +105,7 @@ body {
         color: #000;
         font-family: 'Oleo Script', cursive;
         background-clip: text;
+        padding-right: 0.8vmin;
         -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;
         animation: gradient 10s ease infinite;
